<resources>
    <string name="app_name">RSS feed aggregator</string>
    <string name="splash_logo">Logo</string>
    <string name="version_intro">version</string>
    <string name="login">LOG IN</string>
    <string name="email">Ex: jean@domain.com</string>
    <string name="login_dialog_view_group">login_dialog_view_group</string>
    <string name="login_title">Something went wrong :/</string>
    <string name="login_content">Layout cannot be inflated. Our deep apologies for that.</string>
    <string name="email_title">EMAIL</string>
    <string name="password_title">PASSWORD</string>
    <string name="connect_to_account">Connect with your account</string>
    <string name="intent_user" translatable="false">intent_user</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="welcome">WELCOME</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="log_in">LOG IN</string>
    <string name="change_user">Change user</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="menu_icon">menu icon</string>
    <string name="admin">Set categories</string>
    <string name="help">Help</string>
    <string name="advice_log_in">The app is better when you are logged in! :)</string>
</resources>
