<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_small"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/connect_to_account"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_title_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin_small"
            android:paddingLeft="@dimen/activity_horizontal_margin_small"
            android:paddingRight="@dimen/activity_horizontal_margin_small"
            android:paddingStart="@dimen/activity_horizontal_margin_small"
            android:text="@string/email_title"
            android:textSize="@dimen/text_title_small" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin_small"
            android:paddingLeft="@dimen/activity_horizontal_margin_small"
            android:paddingRight="@dimen/activity_horizontal_margin_small"
            android:paddingStart="@dimen/activity_horizontal_margin_small"
            android:text="@string/password_title"
            android:textSize="@dimen/text_title_small" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

</LinearLayout>