<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin_small"
    android:paddingLeft="@dimen/activity_horizontal_margin_small"
    android:paddingRight="@dimen/activity_horizontal_margin_small"
    android:paddingStart="@dimen/activity_horizontal_margin_small"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="yb.rssfeedaggregator.splash_activity.SplashActivity">

    <TextView
        android:id="@+id/app_name"
        style="@style/SplashScreenAppNameTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/splash_logo"
        android:src="@drawable/feed_logo_yellow_flat" />

    <TextView
        android:id="@+id/welcome"
        style="@style/SplashScreenWelcomeTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/welcome" />

    <com.github.silvestrpredko.dotprogressbar.DotProgressBar
        android:id="@+id/dot_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        custom:amount="4"
        custom:duration="500"
        custom:endColor="@color/colorPrimaryLight"
        custom:startColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
