<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context="yb.rssfeedaggregator.main_activity.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_add_circle_outline_white_18dp"
            android:drawablePadding="@dimen/activity_horizontal_margin_small"
            android:drawableStart="@drawable/ic_add_circle_outline_white_18dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/change_user"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="end|center_vertical">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_back_white_24dp" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <info.hoang8f.widget.FButton
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_small"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
            android:layout_marginRight="@dimen/activity_horizontal_margin_small"
            android:layout_marginStart="@dimen/activity_horizontal_margin_small"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            fbutton:buttonColor="@color/colorPrimary"
            fbutton:cornerRadius="0dp"
            fbutton:shadowColor="@color/colorPrimaryDark"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="3dp" />

    </RelativeLayout>

</LinearLayout>
